--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@ngrx/effects": "^9.1.2",
+    "@ngrx/router-store": "^9.1.2",
     "@ngrx/store": "^9.1.2",
     "bootstrap": "^3.4.1",
     "rxjs": "~6.4.0",
@@ -31,6 +32,7 @@
     "@angular/cli": "~8.3.26",
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
+    "@ngrx/store-devtools": "^9.1.2",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
